--- a/PlaywriteAutomation/test-output/index.html
+++ b/PlaywriteAutomation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Temps\testng-eclipse-31205215\testng-customsuite.xml</span>
+                    <span>C:\Temps\testng-eclipse--679051487\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -153,7 +153,7 @@
 	Error message not as expected expected [Please fill out this field.] but found [null]
 	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:47)
 	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:31)
-	at com.pdea.PlaywrightAutomation.PlaywriteAutomation.test_scenario3(PlaywriteAutomation.java:151)
+	at com.pdea.PlaywrightAutomation.PlaywriteAutomation.test_scenario3(PlaywriteAutomation.java:150)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
@@ -211,7 +211,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Temps\testng-eclipse-31205215\testng-customsuite.xml</span>
+            <span class="header-content">C:\Temps\testng-eclipse--679051487\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -264,15 +264,15 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test_scenario3')
 data.setCell(0, 2, 'com.pdea.PlaywrightAutomation.PlaywriteAutomation')
-data.setCell(0, 3, 6331);
+data.setCell(0, 3, 7683);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'test_scenario2')
 data.setCell(1, 2, 'com.pdea.PlaywrightAutomation.PlaywriteAutomation')
-data.setCell(1, 3, 4985);
+data.setCell(1, 3, 5360);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'test_scenario1')
 data.setCell(2, 2, 'com.pdea.PlaywrightAutomation.PlaywriteAutomation')
-data.setCell(2, 3, 4055);
+data.setCell(2, 3, 2785);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -310,37 +310,37 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_scenario1</span>
-                <span class="method-start">26540 ms</span>
+                <span class="method-start">36436 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">quitDriver</span>
-                <span class="method-start">30599 ms</span>
+                <span class="method-start">39240 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">30628 ms</span>
+                <span class="method-start">39310 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_scenario2</span>
-                <span class="method-start">40249 ms</span>
+                <span class="method-start">49145 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">quitDriver</span>
-                <span class="method-start">45245 ms</span>
+                <span class="method-start">54512 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">45303 ms</span>
+                <span class="method-start">54591 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">test_scenario3</span>
-                <span class="method-start">55107 ms</span>
+                <span class="method-start">64956 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">quitDriver</span>
-                <span class="method-start">61451 ms</span>
+                <span class="method-start">72677 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
